# rapidstring

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  a.out  appveyor.yml  rapid_str.sln  rapid_string.sln
benchmark/: CMakeLists.txt  README.md  benchmark.vcxproj  benchmark.vcxproj.filters  concat.hpp  construct.hpp  main.cpp  resize.hpp
benchmark/src/: append.hpp  concat.cpp  concat.hpp  construct.cpp  construct.hpp  main.cpp  resize.cpp  resize.hpp
cmake/: utility.cmake
docs/: annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  group__Construction.html  group__capacity.html  group__construction.html  group__copying.html  group__heap.html  group__modifiers.html  group__structures.html  index.html  menudata.js  modules.html  pages.html  rapid__string_8h.html  rapid__string_8h_source.html  rapidstring_8h.html  rapidstring_8h_source.html  structrs__align__dummy-members.html  structrs__align__dummy.html  structrs__heap-members.html  structrs__heap.html  structrs__stack-members.html  structrs__stack.html  structrsa__stack__t.html  todo.html  unionrapid__string-members.html  unionrapid__string.html  unionrapidstring.html
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  defines_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_3.js  variables_5.js  variables_6.js
include/: rapid_str.h  rapid_string.h  rapidstring.h  stack_allocator.hpp
project/: rapid_str.vcxproj  rapid_str.vcxproj.filters  rapid_string.vcxproj  rapid_string.vcxproj.filters
scripts/: toc.py
src/: rapid_str.c  rapid_string.c
test/: CMakeLists.txt  concat.cpp  main.c  main.cpp  test.vcxproj  test.vcxproj.filters  unit_tests.h  utility.hpp
test/src/: access.cpp  append.cpp  assign.cpp  capacity.cpp  concat.cpp  construct.cpp  copy.cpp  iterator.cpp  main.cpp  modifiers.cpp  utility.hpp
